v1.2 (zoom on iPhone fixed & comma value inputs handle ready)

--- a/responsive.css
+++ b/responsive.css
@@ -12,6 +12,10 @@
   html {
     font-size: 50%;
   }
+
+  .input-amount {
+    font-size: 16px;
+  }
 }
 
 @media all and (max-width: 535px) {
